# crowe-logic-foundry-quantum-blueprint

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  qpu-access-offer.yml
.github/workflows/: ci.yml
agents/: quantum_calibration.yaml
blueprints/: __init__.py  cli.py
docs/: ARCHITECTURE.md  BLOG_POST.md
hf_space/: README.md  app.py  requirements.txt
hf_space/blueprints/: calibrate_qpu.py  ising_client.py  trinity_adapter.py
hf_space/data/: sample_qpu_trace.json
launch/: 02-hf-space.md  03-nvidia-forum-post.md  04-hf-blog-draft.md  05-show-hn.md  06-x-thread.md  07-qpu-vendor-emails.md  08-nvidia-blog-pitch.md  09-quantum-pubs-pitch.md  10-inception-application.md  README.md
scripts/: email-drafts.sh  launch-day.sh  send-emails.py  traction.sh
tests/: test_loop.py
